--- a/build.properties
+++ b/build.properties
@@ -296,6 +296,8 @@ rice.thread.pool.size=20
 rice.struts.config.files=/kr/WEB-INF/struts-config.xml
 # the files that define the struts context for the workflow struts module
 rice.workflow.struts.config.files=/en/WEB-INF/struts-config.xml
+# the files that define the struts context for the kew struts module
+rice.kew.struts.config.files=/kew/WEB-INF/struts-config.xml
 # the path to the file containing the log4j configuration for workflow
 rice.workflow.log4j.settings.path=${log4j.settings.file}
 # the files that define the struts context for the ksb struts module
