KULCAP-297 Asset (edit) maintenance - document does not behave the same for edit errors.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2075,7 +2075,9 @@ error.pre.tag.detail.excess=Total tagging lines must be equal or less than the q
 error.invalid.asset.warranty.no=Asset Warranty number is a required field when warrany information is available.
 error.capital.asset.vendor.name.required=Vendor name is a required field for capital assets.
 error.tag.number.duplicate=The Tag Number already exists. 
-error.asset.retired.noedit=To retire a capital asset you must issue a retirement document. 
+error.asset.retired.capital=To retire a capital asset you must issue a retirement document. Please change the asset status to an active status.
+error.asset.retired.non.capital.active=To retire a Non-capital active asset please change the asset status to O Non-capital retired.
+error.asset.retired.act.non.capital.2003=To retire a Act Non-capital 2003 asset please change the asset status to E Ret Non-capital 2003.
 error.invalid.in.service.date=New In-Service Date has no valid University Fiscal Year defined.
 error.asset.fabrication.totalAmount.required=Fabrication estimated amount is a required field.
 error.asset.fabrication.totalAmount.negative=Fabrication estimated amount should be a positive amount.
