KULAR-586 : Updated the cash control doc to use the sys info table to retrieve the processing chart and org to compare against the user's chart and org, rather than using the org options values.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1918,6 +1918,7 @@ message.ar.documentDeletedFromCashControl= The document has been deleted from th
 error.ar.ReferenceDocNumberCannotBeNullforPaymentMediumCash= Error: Reference Document Number cannot be null for Payment Medium CASH.
 error.ar.ReferenceDocNumberMustBeValidforPaymentMediumCash= Error: Reference Document Number must be valid for Payment Medium CASH.
 error.ar.OrganizationOptionsMustBeSet= Error: Organization Options must be set up for user's organization.
+error.ar.SystemInformationMustBeSet= Error: System Information must be set up for user's organization.
 error.ar.LineAmountCannotBeZero= Error: Line Amount cannot be zero.
 error.ar.LineAmountCannotBeNegative= Error: Line Amount cannot be negative.
 error.ar.CustomerPaymentMediumIsNotValid= Error: Customer Payment Medium is not valid.
