Update to use the same SQLSuffixableImpl as Rice.

--- a/work/src/OJB.properties
+++ b/work/src/OJB.properties
@@ -10,7 +10,8 @@ timeBetweenEvictionRunsMillis=-1
 minEvictableIdleTimeMillis=1000000
 whenExhaustedAction=0
 ConnectionManagerClass=org.apache.ojb.broker.accesslayer.ConnectionManagerImpl
-SqlGeneratorClass=org.apache.ojb.broker.accesslayer.sql.SqlGeneratorDefaultImpl
+SqlGeneratorClass=org.kuali.rice.core.ojb.SqlGeneratorSuffixableImpl
+#SqlGeneratorClass=org.apache.ojb.broker.accesslayer.sql.SqlGeneratorDefaultImpl
 ProxyFactoryClass=org.apache.ojb.broker.core.proxy.ProxyFactoryCGLIBImpl
 IndirectionHandlerClass=org.apache.ojb.broker.core.proxy.IndirectionHandlerCGLIBImpl
 ListProxyClass=org.apache.ojb.broker.core.proxy.ListProxyDefaultImpl
