KFSMI-2101: add cash drawer maintenance document

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -851,6 +851,23 @@ error.document.cashieringTransaction.cannotPayOffAdvanceWithAdvance=Item in Proc
 error.document.cashieringTransaction.newItemInProcessInFuture=New Item in Process must be opened today or before today.
 error.cashDrawerCorrection.negativeAmount=The {0} amount (${1}) cannot be negative.
 
+# cash drawer maint doc
+error.document.cashDrawer.hundredDollarAmountNegative=The hundred dollar amount must be equal to or greater than zero.
+error.document.cashDrawer.fifyDollarAmountNegative=The fifty dollar amount must be equal to or greater than zero.
+error.document.cashDrawer.twentyDollarAmountNegative=The twenty dollar amount must be equal to or greater than zero.
+error.document.cashDrawer.tenDollarAmountNegative=The ten dollar amount must be equal to or greater than zero.
+error.document.cashDrawer.fiveDollarAmountNegative=The five dollar amount must be equal to or greater than zero.
+error.document.cashDrawer.twoDollarAmountNegative=The two dollar amount must be equal to or greater than zero.
+error.document.cashDrawer.oneDollarAmountNegative=The one dollar amount must be equal to or greater than zero.
+error.document.cashDrawer.otherDollarAmountNegative=The other dollar amount must be equal to or greater than zero.
+error.document.cashDrawer.hundredCentAmountNegative=The hundred cent amount must be equal to or greater than zero.
+error.document.cashDrawer.fiftyCentAmountNegative=The fifty cent amount must be equal to or greater than zero.
+error.document.cashDrawer.twentyFiveCentAmountNegative=The twenty five cent amount must be equal to or greater than zero.
+error.document.cashDrawer.tenCentAmountNegative=The ten cent amount must be equal to or greater than zero.
+error.document.cashDrawer.fiveCentAmountNegative=The five cent amount must be equal to or greater than zero.
+error.document.cashDrawer.oneCentAmountNegative=The one cent amount must be equal to or greater than zero.
+error.document.cashDrawer.otherCentAmountNegative=The other cent amount must be equal to or greater than zero.
+
 # Sufficient Funds
 error.account.insufficientFunds=Insufficient funds for Account {0}-{1}, SF Object {2}, Account Sufficient Funds Code {3}. Please contact your campus budget office if you have concerns about insufficient funds checking.
 
