KULCAP-758 	 active indicator logic.
only BCIE changes

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2067,9 +2067,8 @@ error.document.paymentApplication.nonInvoicedFinancialObjectRequired=Object code
 error.document.paymentApplication.cannotQuickApplyOnInvoiceWithZeroOpenAmount=Cannot quick-apply to an Invoice with a Zero Open Amount.
 
 # Capital Assets Management
-
 #error.document.asset.locked=Asset {0} is locked by document <a href="{1}">#{2}</a>. 
- 
+error.document.inactive.field={0} is inactive. 
 # ** Batch **
 error.batch.depreciation.assetsNotFound=There are not assets eligible for depreciation.
 error.batch.depreciation.baseAmountCalculationError=An error occurred when calculating assets base amount.
