KULCAP-790 List of all error messages in CAB and CAMS

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2070,7 +2070,7 @@ error.document.paymentApplication.cannotQuickApplyOnInvoiceWithZeroOpenAmount=Ca
 #error.document.asset.locked=Asset {0} is locked by document <a href="{1}">#{2}</a>. 
 error.document.inactive.field={0} is inactive. 
 # ** Batch **
-error.batch.depreciation.assetsNotFound=There are not assets eligible for depreciation.
+error.batch.depreciation.assetsNotFound=There are no assets eligible for depreciation.
 error.batch.depreciation.baseAmountCalculationError=An error occurred when calculating assets base amount.
 error.batch.depreciation.calculationError=An error occurred when calculating assets depreciation.
 error.batch.depreciation.glpeUpdateError=An error occurred when updating general pending entry table.
@@ -2088,10 +2088,10 @@ error.invalid.building.code=Building code {0} is not valid for campus code {1}.
 error.invalid.room.number={0}-{1}-{2} is not a valid room number.
 error.invalid.pre.tag.number=Tag number "{0}" already exists in the Database.
 error.invalid.no.detail.line = You must enter at least 1 pretag detail.
-error.pre.tag.detail.excess=Total tagging lines must be equal or less than the quantity invoiced "{0}".
-error.invalid.asset.warranty.no=Asset Warranty number is a required field when warrany information is available.
+error.pre.tag.detail.excess=Total tagging lines must be equal or less than the quantity ordered "{0}".
+error.invalid.asset.warranty.no=Asset Warranty number is a required field when other warrany information is entered.
 error.capital.asset.vendor.name.required=Vendor name is a required field for capital assets.
-error.tag.number.duplicate=The Tag Number already exists. 
+error.tag.number.duplicate=Tag number "{0}" already exists in the Database. 
 error.asset.retired.capital=To retire a capital asset you must issue a retirement document. Please change the asset status to an active status.
 error.asset.retired.non.capital.active=To retire a Non-capital active asset please change the asset status to O Non-capital retired.
 error.asset.retired.act.non.capital.2003=To retire a Act Non-capital 2003 asset please change the asset status to E Ret Non-capital 2003.
@@ -2149,7 +2149,7 @@ error.non.capital.asset.retirment = {0} is Non-Capital Asset and it can not be r
 error.invalid.retirement.detail.info = {0} "{1}" does not exist.
 error.retirement.detail.info.null = {0} is a required field for retirement reason of "{1}".
 error.non.active.asset.retirment = {0} is not an active asset.(Active Asset means asset status should be A, C, S or U).
-error.invalid.user.group.for.nonmoveable.asset = Current user can not retire this non-moveable asset : "{0}".
+error.invalid.user.group.for.nonmoveable.asset = Current user does not have the authorty to retire asset : "{0}".
 error.invalid.capital.asset.number = {0} is not a valid Capital Asset Number.
 error.duplicate.capital.asset.number.with.target= {0} can not be the same as Merge target capital asset number. 
 error.blank.capital.asset.number = Capital Asset Number can NOT be blank.
@@ -2209,7 +2209,7 @@ error.uploadFile.invalid.type=The type of selected file is invalid.
 error.document.invalid.field={0} is invalid
 error.document.capitalAsset.not.found=Asset not found
 error.document.capitalAsset.retired=Asset is retired
-error.document.duplicated.tagNumber=Tag number is in use in than one active asset
+error.document.duplicated.tagNumber=Tag number is in use on more than one active asset
 error.document.locked.asset=Asset is locked by document {0}
 #**** End - Asset Barcode Inventory
 
@@ -2223,7 +2223,7 @@ error.invalid.expected.max.date = Expected Return Date is not allowed to be grea
 error.invalid.loan.return.date = Loan Return Date is not allowed to be before loan date or greater than 2 years from the Loan Date. 
 error.invalid.borrower.state.code = Borrower State code {0} is not valid.
 error.invalid.borrower.storage.state.code = Borrower Storage State code {0} is not valid.
-error.campus.tag.number.required = A Tag Number is required to loan this asset. 
+error.campus.tag.number.required = Tag number must exist on asset edit screen prior to issuing loan document. 
 #***********************************************************
 
 #***** Start Asset Global Messages ***********
@@ -2232,7 +2232,7 @@ error.asset.inventory.status.code.required.for.payment = Asset status should be 
 error.acquisition.code.required = Acquisition type code should be specified to validate asset payment.
 error.asset.owner.account.not.active = Organization owner account {0}/{1} is not active
 error.asset.payment.account.not.valid = Payment account {0}/{1} is not valid.
-error.document.min.one.asset.required = At least one asset record should be configured.
+error.document.min.one.asset.required = At least one asset record should be configured.  Click on the Add button to configure asset.
 error.document.min.one.payment.required = At least one asset payment should be entered for capital asset.
 error.capital.asset.manufacturer.name.required = Manufacturer name is a required for capital assets.
 error.acquisition.code.not.allowed = Current user can not use acquisition type code {0}.
@@ -2252,9 +2252,9 @@ error.capital.asset.payment.min.limit = To create a capital asset the payment li
 error.noncapital.asset.payment.max.limit = Non-capital asset payment amount must be less than {0} for each asset. A capital asset can be created by changing asset status code to one of [A,C,N,S] and acquisition type code to one of [F,G,S,T]. 
 error.payment.amount.invalid = Payment amount must be positive.
 error.invalid.fin.object.sub.type.code = {0} for this payment is not a valid grouping per {1}.
-error.document.posting.date.required = Financial document posting date is required When acquisition type is new.
-error.expenditure.financial.document.number.required = Expenditure financial document number is required.
-error.expenditure.financial.document.type.code.required = Expenditure financial document type code is required.
+error.document.posting.date.required = Financial document posting date is required when acquisition type is new.
+error.expenditure.financial.document.number.required = Document number is required.
+error.expenditure.financial.document.type.code.required = Document type code is required.
 error.financial.document.posting.year.required = Financial document posting year is required to select object code.
 error.university.not.defined.for.date = University has not defined for date {0}.
 error.separate.asset.total.cost.not.match.payment.total.cost = Total cost of Asset to be separated does not match Asset payments total amount. Cannot separate until data fixed.
