KULCAP-818 Fixing optimistic error display for CAB screens

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2307,7 +2307,8 @@ error.trade.in.pending = You must first allocate trade-in allowance for selected
 question.trade.in.indicator.existing = Trade-in indicator is found in the selected lines but no trade-in allowance found. Trade-in allowance may not be invoiced yet. Would you like to continue?
 question.skip.asset.numbers.to.asset.global = Asset numbers are found set by PurAp users and will be ignored when create asset. Would you like to continue?
 error.fractional.quanity = Fractional quantity invoiced is allowed only if <1.
-error.merge.with.pretagging = Merge is disallowed because the selected merge lines include more than 1 pre-tagging data entries. 
+error.merge.with.pretagging = Merge is disallowed because the selected merge lines include more than 1 pre-tagging data entries.
+ 
 #******** CAB FP Messages ***
 error.asset.do.not.enter.any.data = Only enter data for asset information if it is required per the accounting lines entered.
 error.asset.require.data.entry = Data required for either updating or creating a new asset.
@@ -2321,4 +2322,5 @@ title.inquiry.url.value.prependtext=show inquiry for
 purchasing.question.change.system=If you continue, the Capital Asset System State, System Type, and all information in the Capital Asset tab will be cleared. Do you wish to continue?
 purchasing.message.system.changed=All Capital Asset information has been cleared.
 purchaseOrder.amend.message.change.systemType=The capital asset system type of {0} was changed during a PO amendment
-
+# data messages
+cab.error.data.edit.lock = This version of data has already been modified by another user. Press the "reload" button to replace your copy with the newer version. 
