--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2057,14 +2057,16 @@ error.document.paymentApplication.nonArLineRequired=Non-AR amount field is requi
 error.document.paymentApplication.nonArLineAmountMustBePositive=Non-AR amount field must be positive.
 error.document.paymentApplication.nonArLineAmountExceedsInvoiceBalance=Non-AR amount cannot exceed the selected invoice balance.
 error.document.paymentApplication.nonArLineAmountExceedsBalanceToBeApplied=Non-AR amount cannot exceed the balance to be applied.
-error.document.paymentApplication.quickAppliedExceedsCashControlTotalAmount=Cannot quick-apply more than the cash control total.
+error.document.paymentApplication.quickAppliedExceedsCashControlTotalAmount=Cannot apply more than the available cash control amount.
 error.document.paymentApplication.AppliedAmountExceedsBalanceToBeApplied=Cannot apply more than the balance to be applied.
 error.document.paymentApplication.unappliedAmountCannotExceedAvailableAmount=Unapplied amount cannot exceed cash control available amount.
-error.document.paymentApplication.unappliedAmountCannotExceedBalanceToBeApplied=Unapplied amount cannot exceed cash control balance to be applied.
+error.document.paymentApplication.unappliedAmountCannotExceedBalanceToBeApplied=Unapplied amount can neither exceed the cash control available amount, nor cause the total amount applied to exceed the cash control available amount.
 error.document.paymentApplication.nonInvoicedChartRequired=Chart is required on non-ar lines.
 error.document.paymentApplication.nonInvoicedAccountRequired=Account is required on non-ar lines.
 error.document.paymentApplication.nonInvoicedFinancialObjectRequired=Object code is required on non-ar lines.
 error.document.paymentApplication.cannotQuickApplyOnInvoiceWithZeroOpenAmount=Cannot quick-apply to an Invoice with a Zero Open Amount.
+error.document.paymentApplication.unappliedAmountCannotBeEmptyOrZero=Unapplied amount cannot be empty or zero.
+error.document.paymentApplication.unappliedCustomerNumberCannotBeBlank=Customer number on unapplied line cannot be blank.
 
 # Capital Assets Management
 #error.document.asset.locked=Asset {0} is locked by document <a href="{1}">#{2}</a>. 
