KULCAP-893: Asset Create, disallow FO change asset total amount during routing.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2262,6 +2262,7 @@ error.university.not.defined.for.date = University has not defined for date {0}.
 error.separate.asset.total.cost.not.match.payment.total.cost = Total cost of Asset to be separated does not match Asset payments total amount. Cannot separate until data fixed.
 error.separate.asset.already.separated = Asset to be separated was already separated by document number(s) {0}.
 error.invalid.acquisition.income.object.code = Income object code {0} from the acqustion table does not exist in the current fiscal year '{1}' for chart '{2}'.
+error.change.asset.total.amount.disallow = The total cost of the asset has changed from ${0} to ${1}. This is not allowed when you are approving a document. 
 #***** End Asset Global Messages ***********
 
 note.trickleDownInactivation.inactivatedSubAccounts=The following Sub-Account(s) were inactivated: {0}.
