KULAR-614 : Added code to force customer creation to require 3 characters in the name.  This is tied to code in CustomerServiceImpl (line 65) which was failing due to names with 2 or fewer characters.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1951,6 +1951,7 @@ error.document.customerType.duplicateValue= "Error: A Customer Type with the sam
 
 # Accounts Receivable: Customer error messages
 message.document.customerMaintenance.customerWithSameNameExists= "A customer with the same name already exists. Do you wish to continue?"
+error.document.customer.customerNameLessThanThreeCharacters= "Error: A valid customer name must contain at least three characters."
 error.document.customer.addressRequired= "Error: At least one address is required."
 error.document.customer.oneAndOnlyOnePrimaryAddressRequired= "Error: Customer must have one and only one Primary address."
 error.document.customer.stateCodeIsRequiredWhenCountryUS = "Error: Customer State Code is required when country is US."
