KULBUD-83: Account Object Detail Report Initial Testing Problems KULBUD-84: Account Salary Detail Initial Report Testing KULBUD-85: Account Monthly Detail Initial Report Testing

--- a/work/src/org/kuali/kfs/module/bc/report/BudgetOrgReport.properties
+++ b/work/src/org/kuali/kfs/module/bc/report/BudgetOrgReport.properties
@@ -139,7 +139,7 @@ footer.TotalIntended = + = Total Intended Discrepancy
 
 footer.accountObjectDetail = Account Object Detail -
 footer.accountSalaryDetail = Account Salary Detail -
-footer.accountSalaryDetail = Account Monthly Detail -
+footer.accountMonthlyDetail = Account Monthly Detail -
 
 
 
