--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1809,7 +1809,7 @@ disbursementNumberMaintenanceSaveAction.save.error="ERROR: You must select a Ban
 DisbursementNumberMaintenanceForm.beginDisbursementNbr.invalid=ERROR: The Beginning Disbursement Number must be all numeric digits above 0.<br>
 DisbursementNumberMaintenanceForm.endDisbursementNbr.invalid=ERROR: The Ending Disbursement Number must be all numeric digits above 0.<br>
 DisbursementNumberMaintenanceForm.lastAssignedDisburseNbr.invalid=ERROR: The Last Disbursement Number Assigned must be all numeric digits above 0.<br>
-DisbursementNumberMaintenanceForm.endAssignedDisburseNbr.smaller=ERROR: The Ending Disbursement Number should not be less than the Beginning Disbursement Number.<br>
+DisbursementNumberMaintenanceForm.endAssignedDisburseNbr.smaller=ERROR: The last assigned disbursement number should not be less than the beginning disbursement number.<br>
 DisbursementNumberMaintenanceForm.lastAssignedDisburseNbr.outofrange=ERROR: The Last Disbursement Number should be within the range of beginning and ending Disbursement Number.<br>
 DisbursementNumberMaintenanceForm.physCampusProcCode.invalid=ERROR: You must enter a Physical Campus Processing Location Code.<br>
 DisbursementNumberMaintenanceForm.disbNbrEffectiveDt.missing=ERROR: You must enter an effective date.<br>
