--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1792,12 +1792,12 @@ error.paymentDetail.invalidDisbursementToCancelAndReissue= ERROR:Invalid disburs
 error.paymentDetail.invalidStatusToHoldPayment= ERROR: Invalid status to hold pending payment.
 error.paymentDetail.invalidStatusToRemoveHold= ERROR: Invalid status to remove hold on payment.
 
-message.paymentDetail.hold= Are you sure you wish to hold this payment?.
+message.paymentDetail.hold= You are about to Hold the following Payment {0}. Are you sure you wish to hold this payment?.
 message.paymentDetail.removeHold= You are about to Remove a Hold on the following Payment {0}.
-message.paymentDetail.cancel= Are you sure you wish to cancel this payment? 
+message.paymentDetail.cancel= You are about to Cancel the following Payment {0}.  Once a payment has been cancelled it can not be re-opened for payment. Are you sure you wish to cancel this payment? 
 message.paymentDetail.cancelDisbursement= You are about to Cancel the Disbursement {0}.  This action is final and cannot be undone.
 message.paymentDetail.cancelReissueDisbursement= You are about to Cancel and Reissue the Disbursement {0}.
-message.paymentDetail.changeImmediate= Are you sure you wish to set this payment as immediate?
+message.paymentDetail.changeImmediate= You are about to Change the Print Immediate Flag on the following Payment {0}. Are you sure you wish to set this payment as immediate?
 
 paymentMaintenanceAction.batchStatus.notAllOpen=ERROR: All payments in this batch must have a Payment Status of Open<br>
 paymentMaintenanceAction.batchStatus.notAllOpenOrHeld=ERROR: All payments in this batch must have a Payment Status of Open or all must have a status of Held<br>
