Changes for GLCP, LLCP, and file separator

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -723,6 +723,7 @@ gl.EnterpriseFeeder.StatusDescription.org.kuali.kfs.gl.batch.service.impl.FileRe
 gl.EnterpriseFeeder.StatusDescription.org.kuali.kfs.gl.batch.service.impl.RequiredFilesMissingStatus=Enterprise feeder failed because at least one of the required files was not present.
 
 error.gl.NumberFormatOriginEntryFromTextFile=Line {0} was not loaded because {1} has invalid value.
+error.gl.InvalidFormatOriginEntryFromTextFile = Line {0} was not loaded because {1}.
 
 error.gl.CircularityInContinuationAccountLogic=Circular dependency in account continuation logic.
 error.gl.DebitCreditIndicatorMustBeSpace=Debit/Credit indicator must be space.
@@ -768,6 +769,8 @@ error.gl.correction.must.choose.field.name.when.adding.criterion=Must choose fie
 error.gl.correction.criteria.to.add.must.be.blank.for.save=When saving or routing a document, the field and value for these criterion lines with an "add" button must be blank.  Please either add or clear these lines.
 error.gl.correction.persisted.origin.entries.missing=The origin entries associated with this document are unavailable.  Please select or upload another origin entry group.
 error.gl.correction.remove.group.requires.database="Remove group from processing" requires the "Database" system option.
+gl.correction.persisted.origin.entries.missing=The origin entries associated with this document are unavailable.
+gl.correction.restricted.functionality.search.results.label=The search results are unavailable because the selected origin entry group is too large. 
 gl.correction.persisted.origin.entries.missing=The origin entries associated with this document are unavailable.
 
 error.gl.FiscalYearCannotBeNullForBalanceTypeA2 = Fiscal Year cannot be null for balance type A2
