KULPURAP-3265: default building address; KFSMI-2293: changes for saving sensitive data to force indexing

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1093,6 +1093,7 @@ message.b2b.po.retransmit.success=Purchase Order was resent successfully.
 message.b2b.po.retransmit.failed=Error occurred resending Purchase Order.  See notes for details.
 
 # Purchase Order & Requisition
+message.default.building.saved=The building has been saved for use on future documents.
 error.delivery.required.date.in.the.past=Delivery Required Date must not be before today's date.
 error.delivery.campus.invalid=The selected delivery campus is not allowed for use on this document.
 error.document.requisition.accountClosed=Account {0}-{1} is closed and cannot be used. Please select a different account.
