KFSMI-2660 Customer Profile can have only one Customer Bank per Disbursement Type Code

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1860,6 +1860,7 @@ error.pdp.paymentLoad.invalidDocType=Group #{0}, Detail #{1}, Doc Type {2} is no
 error.pdp.paymentLoad.invalidPayeeIdType=Group #{0}, Payee ID Type {1} is not valid
 
 error.pdp.achAccount.accountNotInactivable = AchBank record cannot be set to inactive because a payee ach account record exists with this bank routing number.
+error.pdp.customerProfile.duplicateBankPerDisburementTypeCode = Customer Profile should only have one Customer Bank per Disbursement Type Code.
 
 message.pdp.paymentLoad.fileThreshold=The total amount of this file {0} is greater than the customer threshold amount {1}
 message.pdp.paymentLoad.paydateOver30DaysPast=Payment date of {0} is more than 30 days ago
