updating workflow urls for workflow using kns

--- a/build.properties
+++ b/build.properties
@@ -114,7 +114,7 @@ plugin.lib.excludes=rice-kew-*.jar,rice-ksb-*.jar,rice-core-*.jar,rice-shared-*.
 
 cas.application=cas
 rice.application=kr
-workflow.application=en
+workflow.application=kew
 ksb.application=ksb
 
 
