Adding Purap testing spring beans for Dan's unit test work.

--- a/build.properties
+++ b/build.properties
@@ -178,7 +178,7 @@ org/kuali/kfs/module/ec/spring-ec.xml,org/kuali/kfs/module/ld/spring-ld.xml,org/
 institution.spring.source.files=
 spring.source.files=${core.spring.source.files}${optional.module.spring.source.files}${institution.spring.source.files}
 # the core files that are included in the application spring context for unit testing
-core.spring.test.files=SpringBeansTest.xml,org/kuali/kfs/sys/spring-sys-test.xml
+core.spring.test.files=SpringBeansTest.xml,org/kuali/kfs/sys/spring-sys-test.xml,org/kuali/kfs/sys/spring-purap-test.xml
 # the institution specific files that are included in the application spring context for unit testing
 institution.spring.test.files=
 # all the files that are included in the application spring context for unit testing
