--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1799,8 +1799,8 @@ error.paymentDetail.invalidStatusToRemoveHold= ERROR: Invalid status to remove h
 message.paymentDetail.hold= You are about to Hold the following Payment {0}. Are you sure you wish to hold this payment?.
 message.paymentDetail.removeHold= You are about to Remove a Hold on the following Payment {0}.
 message.paymentDetail.cancel= You are about to Cancel the following Payment {0}.  Once a payment has been cancelled it can not be re-opened for payment. Are you sure you wish to cancel this payment? 
-message.paymentDetail.cancelDisbursement= You are about to Cancel the Disbursement {0}.  This action is final and cannot be undone.
-message.paymentDetail.cancelReissueDisbursement= You are about to Cancel and Reissue the Disbursement {0}.
+message.paymentDetail.cancelDisbursement= You are about to Cancel the Disbursement {0}.  This action is final and cannot be undone. Are you sure you wish to cancel this disbursement? 
+message.paymentDetail.cancelReissueDisbursement= You are about to Cancel and Reissue the Disbursement {0}. Are you sure you wish to cancel and reissue this disbursement?
 message.paymentDetail.changeImmediate= You are about to Change the Print Immediate Flag on the following Payment {0}. Are you sure you wish to set this payment as immediate?
 
 paymentMaintenanceAction.batchStatus.notAllOpen=ERROR: All payments in this batch must have a Payment Status of Open<br>
