KFSMI-2856 : added datasource and configuration parameter for supporting embedded or remote KIM

--- a/build.properties
+++ b/build.properties
@@ -335,16 +335,51 @@ rice.workflow.build.environment=${build.environment}
 rice.workflow.url=${application.url}/${workflow.application}
 
 # are multiple applications at your institution using workflow, and do you therefore point to a central workflow deployment that they all use?
-# note, many of the properties prefixed by "rice.workflow" above will not apply if this is set to true, e.g. xml polling configuration, log4j settings file, etc.
+# note, many of the properties prefixed by "rice.workflow" above (and below) will not apply if this is set to true, e.g. xml polling configuration, log4j settings file, etc.
 rice.use.standalone.workflow=false
 
+# Mode that KIM should run within 
+# local - used in development
+# embedded - using standalone rice server but running KIM services locally
+# remote - accessing KIM core services over the KSB
+kim.mode=local 
+
 # settings for the datasource used by embedded workflow when usng a standalone workflow server
+
 rice.workflow.datasource.username=${datasource.username}
 rice.workflow.datasource.password=${datasource.password}
 rice.workflow.datasource.pool.size=${datasource.pool.size}
 rice.workflow.datasource.connection.timeout=${datasource.connection.timeout}
 rice.workflow.datasource.validating.query=${datasource.validating.query}
 rice.workflow.datasource.maximum.cached.preparedstatements=${datasource.maximum.cached.preparedstatements}
+# commented out since the build process sets these dynamically 
+#rice.workflow.datasource.platform=${datasource.platform}
+#rice.workflow.datasource.url=${datasource.url}
+#rice.workflow.datasource.driver.class=${datasource.driver.class}
+
+# settings for the datasource used for the KSB registry when usng a standalone workflow server
+rice.ksb.datasource.username=${datasource.username}
+rice.ksb.datasource.password=${datasource.password}
+rice.ksb.datasource.pool.size=${datasource.pool.size}
+rice.ksb.datasource.connection.timeout=${datasource.connection.timeout}
+rice.ksb.datasource.validating.query=${datasource.validating.query}
+rice.ksb.datasource.maximum.cached.preparedstatements=${datasource.maximum.cached.preparedstatements}
+# commented out since the build process sets these dynamically 
+#rice.ksb.datasource.platform=${datasource.platform}
+#rice.ksb.datasource.url=${datasource.url}
+#rice.ksb.datasource.driver.class=${datasource.driver.class}
+
+# settings for the datasource used by embedded workflow when usng a standalone workflow server
+rice.kim.datasource.username=${datasource.username}
+rice.kim.datasource.password=${datasource.password}
+rice.kim.datasource.pool.size=${datasource.pool.size}
+rice.kim.datasource.connection.timeout=${datasource.connection.timeout}
+rice.kim.datasource.validating.query=${datasource.validating.query}
+rice.kim.datasource.maximum.cached.preparedstatements=${datasource.maximum.cached.preparedstatements}
+# commented out since the build process sets these dynamically 
+#rice.kim.datasource.platform=${datasource.platform}
+#rice.kim.datasource.url=${datasource.url}
+#rice.kim.datasource.driver.class=${datasource.driver.class}
 
 # 3. CONFIGURATION MANAGEMENT PROPERTIES
 
