KULCAP-907  Transfer & Retirement --Display message when document will not create ledger entries.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2176,6 +2176,8 @@ error.asset.object.code.not.found = Asset object code is not defined for Chart C
 error.object.code.from.asset.object.code.not.found = {0} Object Code is not defined for chart '{1}' in the current fiscal year.
 error.object.code.from.asset.object.code.inactive = {0} Object code '{1}' is not active for chart '{2}' in the current fiscal year.
 error.object.code.from.asset.object.code.invalid = {0} Object code '{1}' does not exist in the Chart of Accounts for chart '{2}' in the current fiscal year.
+message.no.ledger.entry.required.transfer = No ledger entries were required to transfer this asset.
+message.no.ledger.entry.required.retirement = No ledger entries were required to retire this asset.
 #*********************************************
 
 # ********** Start - Asset Payment related messages ********
