KFSMI-2885 : added config parameters for KIM cache properties

--- a/build.properties
+++ b/build.properties
@@ -381,6 +381,22 @@ rice.kim.datasource.maximum.cached.preparedstatements=${datasource.maximum.cache
 #rice.kim.datasource.url=${datasource.url}
 #rice.kim.datasource.driver.class=${datasource.driver.class}
 
+# KIM Cache Settings
+
+kim.cache.entity.max.size=3000
+kim.cache.entity.max.age.seconds=3600
+kim.cache.group.max.size=3000
+kim.cache.group.max.age.seconds=3600
+kim.cache.role.max.size=3000
+kim.cache.role.max.age.seconds=300
+kim.cache.permission.max.size=3000
+kim.cache.permission.max.age.seconds=30
+kim.cache.responsibility.max.size=3000
+kim.cache.responsibility.max.age.seconds=30
+kim.cache.person.max.size=3000
+kim.cache.person.max.age.seconds=3600
+
+
 # 3. CONFIGURATION MANAGEMENT PROPERTIES
 
 rice.name=rice
