Updated Rice in KFS to resolve issue with KCB notification from KEW.

--- a/build.properties
+++ b/build.properties
@@ -292,6 +292,10 @@ rice.route.queue.time.increment=1000
 # the number of threads available to process service bus messages, i.e. deal with queued workflow documents
 rice.thread.pool.size=20
 
+# rice & notification
+# determines if notifications coming out of KEW should be forwarded to KEN
+rice.kew.enableKENNotification=false
+
 # the files that define the struts context for the rice struts module
 rice.struts.config.files=/kr/WEB-INF/struts-config.xml
 # the files that define the struts context for the workflow struts module
