--- a/build.properties
+++ b/build.properties
@@ -44,7 +44,6 @@ build.appserver.directory=${build.external.directory}/appserver
 build.user.directory=${build.external.directory}/user
 build.work.directory=${build.external.directory}/work
 build.project.directory=${build.directory}/project
-build.plugin.directory=${build.external.directory}/plugin
 
 distribution.directory=distribution
 distribution.licenses.directory=${distribution.directory}/${licenses.directory}
@@ -60,9 +59,6 @@ test.html.results.directory=${deployDir}/test
 doc.directory=${build.directory}/doc
 dddoc.directory=${build.directory}/doc-dd-tags
 rice.datadictionary.directory=${build.directory}/rice-datadictionary
-plugin.directory=${all.temp.directory}/plugin
-plugin.classes.directory=${plugin.directory}/classes
-plugin.lib.directory=${plugin.directory}/lib
 
 # files
 
@@ -108,14 +104,13 @@ session.document.cache.size = 100
 
 javadoc.max.memory=512M
 
-plugin.lib.excludes=rice-kew-*.jar,rice-ksb-*.jar,rice-core-*.jar,rice-shared-*.jar,commons-logging*.jar,spring-2*.jar
-
 # application dependencies
 
 cas.application=cas
 rice.application=kr
 workflow.application=kew
 ksb.application=ksb
+kim.application=kim
 
 
 # 2. INSTITUTION PROPERTIES
@@ -167,6 +162,9 @@ validate.password=false
 # whether to validate the DD upon startup
 data.dictionary.validate=true
 
+spring.transaction.bean.file=spring-jta.xml
+spring.datasource.bean.file=spring-datasources.xml
+
 # the files that define the spring context for the application - note that further configuration files may be specified in the module definitions
 core.spring.source.files=org/kuali/kfs/sys/spring-sys.xml,org/kuali/kfs/coa/spring-coa.xml,\
 org/kuali/kfs/fp/spring-fp.xml,org/kuali/kfs/gl/spring-gl.xml,org/kuali/kfs/pdp/spring-pdp.xml,org/kuali/kfs/vnd/spring-vnd.xml,\
@@ -177,14 +175,13 @@ org/kuali/kfs/module/ec/spring-ec.xml,org/kuali/kfs/module/ld/spring-ld.xml,org/
 # the institution specific files that define the spring context for the application
 institution.spring.source.files=
 spring.source.files=${core.spring.source.files}${optional.module.spring.source.files}${institution.spring.source.files}
+kfs.rice.override.spring.files=spring-kfs-rice-overrides.xml
 # the core files that are included in the application spring context for unit testing
 core.spring.test.files=SpringBeansTest.xml,org/kuali/kfs/sys/spring-sys-test.xml,org/kuali/kfs/sys/spring-purap-test.xml
 # the institution specific files that are included in the application spring context for unit testing
 institution.spring.test.files=
 # all the files that are included in the application spring context for unit testing
 spring.test.files=${core.spring.test.files}${institution.spring.test.files}
-# the files that are included in the application spring context when running inside of a workflow plugin
-spring.plugin.files=SpringRicePluginBeans.xml
 # the directory where secure application property files are located
 security.directory=${base.security.directory}/${build.environment}/${ant.project.name}
 # the single secure property file currently used by the application
@@ -298,6 +295,7 @@ rice.kew.enableKENNotification=false
 
 # the files that define the struts context for the rice struts module
 rice.struts.config.files=/kr/WEB-INF/struts-config.xml
+rice.kns.struts.config.files=/kr/WEB-INF/struts-config.xml
 # the files that define the struts context for the workflow struts module
 rice.workflow.struts.config.files=/en/WEB-INF/struts-config.xml
 # the files that define the struts context for the kew struts module
@@ -326,29 +324,35 @@ secure.workflowutility.javaservice.endpoint=true
 simpleDocumentActionsService.security=true
 
 
-
+rice.server.url=${application.url}
 # the base url for the rice struts module
-rice.url=${application.url}/${rice.application}
+rice.url=${rice.server.url}/${rice.application}
 # the base url for rice images that can reside outside the application
-rice.externalizable.images.url=${application.url}/${rice.application}/static/images/
+rice.externalizable.images.url=${rice.server.url}/${rice.application}/static/images/
 # the base url for the service bus struts module
-rice.ksb.url=${application.url}/${ksb.application}
+rice.ksb.url=${rice.server.url}/${ksb.application}
+
+rice.kim.url=${rice.server.url}/${kim.application}
 # the workflow deployment environment that this deployment of the application should use (can only differ from ${build.environment} if ${rice.use.standalone.workflow} is true)
 rice.workflow.build.environment=${build.environment}
 # the base url for the workflow struts module or the workflow application on the central server
-rice.workflow.url=${application.url}/${workflow.application}
+rice.workflow.url=${rice.server.url}/${workflow.application}
 
-# are multiple applications at your institution using workflow, and do you therefore point to a central workflow deployment that they all use?
-# note, many of the properties prefixed by "rice.workflow" above (and below) will not apply if this is set to true, e.g. xml polling configuration, log4j settings file, etc.
-rice.use.standalone.workflow=false
-
-# Mode that KIM should run within 
+# Mode that KIM or KEW should run as 
 # local - used in development
 # embedded - using standalone rice server but running KIM services locally
-# remote - accessing KIM core services over the KSB
+# remote - accessing KIM core services over the KSB (not currently supported by KFS for KEW)
 kim.mode=local 
+# are multiple applications at your institution using workflow, and do you therefore point to a central workflow deployment that they all use?
+# If so, this should be changed to "embedded"
+# note, many of the properties prefixed by "rice.workflow" above (and below) will not apply if this is set to true, e.g. xml polling configuration, log4j settings file, etc.
+kew.mode=local
+ksb.mode=local
 
-# settings for the datasource used by embedded workflow when usng a standalone workflow server
+# REMOVE-ME
+rice.use.standalone.workflow=false
+
+# settings for the datasource used by embedded workflow when using a standalone workflow server
 
 rice.workflow.datasource.username=${datasource.username}
 rice.workflow.datasource.password=${datasource.password}
@@ -361,7 +365,7 @@ rice.workflow.datasource.maximum.cached.preparedstatements=${datasource.maximum.
 #rice.workflow.datasource.url=${datasource.url}
 #rice.workflow.datasource.driver.class=${datasource.driver.class}
 
-# settings for the datasource used for the KSB registry when usng a standalone workflow server
+# settings for the datasource used for the KSB registry when using a standalone workflow server
 rice.ksb.datasource.username=${datasource.username}
 rice.ksb.datasource.password=${datasource.password}
 rice.ksb.datasource.pool.size=${datasource.pool.size}
@@ -373,7 +377,7 @@ rice.ksb.datasource.maximum.cached.preparedstatements=${datasource.maximum.cache
 #rice.ksb.datasource.url=${datasource.url}
 #rice.ksb.datasource.driver.class=${datasource.driver.class}
 
-# settings for the datasource used by embedded workflow when usng a standalone workflow server
+# settings for the datasource used by embedded KIM when using a standalone rice server
 rice.kim.datasource.username=${datasource.username}
 rice.kim.datasource.password=${datasource.password}
 rice.kim.datasource.pool.size=${datasource.pool.size}
@@ -431,16 +435,6 @@ release.database.cvs.module=kfs-cfg-dbs
 release.impex.tool.cvs.module=kul-cfg-dbs
 release.rice.cvs.module=${rice.name}
 release.patches.dir=patches
-
-release.kfs.cvs.tag=kfs-release-2-2-tg
-release.demo.dataset.cvs.tag=kfs-release-2-2-demo-tg
-release.bootstrap.dataset.cvs.tag=kfs-release-2-2-bootstrap-tg
-release.impex.tool.cvs.tag=kfs-release-2-2-tg
-release.rice.cvs.tag=kfs-release-2-2-tg
-
-release.cvs.root=
-release.cvs.password=
-
 
 # 5. DATA DICTIONARY SPRING SUPPORT PROPERTIES
 
