KULCAP-966: progress on Barcode Error Document adhoc routing, configure adhoc node as parallel routing.

--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -2222,7 +2222,7 @@ error.document.capitalAsset.not.found=Asset not found
 error.document.capitalAsset.retired=Asset is retired
 error.document.duplicated.tagNumber=Tag number is in use on more than one active asset
 error.document.locked.asset=Asset is locked by document {0}
-error.adhoc.recipient.not.found=Document has error(s) not corrected yet. You need to correct/delete them or add adHoc recipient(s) to proceed.
+error.approve.document.with.error.exist=Document has error(s) not corrected yet. You need to correct all of them to proceed.
 #**** End - Asset Barcode Inventory
 
 #*********************************************
