Added property to match URL property pattern in Rice.

--- a/build.properties
+++ b/build.properties
@@ -337,6 +337,7 @@ rice.kim.url=${rice.server.url}/${kim.application}
 rice.workflow.build.environment=${build.environment}
 # the base url for the workflow struts module or the workflow application on the central server
 rice.workflow.url=${rice.server.url}/${workflow.application}
+rice.kew.url=${rice.server.url}/${workflow.application}
 
 # Mode that KIM or KEW should run as 
 # local - used in development
@@ -353,7 +354,6 @@ ksb.mode=local
 rice.use.standalone.workflow=false
 
 # settings for the datasource used by embedded workflow when using a standalone workflow server
-
 rice.workflow.datasource.username=${datasource.username}
 rice.workflow.datasource.password=${datasource.password}
 rice.workflow.datasource.pool.size=${datasource.pool.size}
