--- a/work/src/ApplicationResources.properties
+++ b/work/src/ApplicationResources.properties
@@ -1841,7 +1841,7 @@ message.disbursement.successfullyCanceled= Disbursement successfully canceled
 message.payment.successfullySetAsImmediate= Payment successfully set as immediate
 message.payment.immediateSuccessfullyRemoved= Immediate successfully removed on payment
 
-message.batchUpload.title.payment=PDP Payment Batch Upload
+message.batchUpload.title.payment=Payment File Batch Upload
 
 error.pdp.paymentLoad.invalidBankCode=Group #{0}, Bank code {1} is not a valid Bank code
 error.pdp.paymentLoad.inactiveBankCode=Group #{0}, Bank code {1} is inactive
